infrastructure/gateways/c0depool-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: c0depool-gateway
  namespace: gateways
spec:
  infrastructure:
    annotations:
      "lbipam.cilium.io/ips": "${GATEWAY_LB_IP}"
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: c0depool-proxy-config
  gatewayClassName: envoy-gateway
  listeners:
    # HTTP
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    # HTTPS
    - name: https
      port: 443
      protocol: HTTPS
      hostname: "*.${PUBLIC_DOMAIN}"
      tls:
        mode: Terminate
        certificateRefs:
        - kind: Secret
          name: ${CERT_SECRET_NAME}
      allowedRoutes:
        namespaces:
          from: All
    # Internal apps
    - name: internal
      port: 443
      protocol: HTTPS
      hostname: "*.internal.${PUBLIC_DOMAIN}"
      tls:
        mode: Terminate
        certificateRefs:
        - kind: Secret
          name: ${CERT_SECRET_NAME}
      allowedRoutes:
        namespaces:
          from: All
    # Blog
    - name: blog
      port: 443
      protocol: HTTPS
      hostname: &blog "${PUBLIC_BLOG_DOMAIN}"
      tls:
        mode: Terminate
        certificateRefs:
        - kind: Secret
          name: *blog
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: c0depool-blog
    # MariaDB
    - name: mariadb
      protocol: TCP
      port: 3306
      allowedRoutes:
        kinds:
          - kind: TCPRoute
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: databases
