infrastructure/gateways/http-to-https-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-to-https-redirect
  namespace: gateways
spec:
  parentRefs:
  - name: c0depool-gateway
    namespace: gateways
    sectionName: http
  - name: c0depool-gateway-internal
    namespace: gateways
    sectionName: http
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
